--- a/app/home.module.css
+++ b/app/home.module.css
@@ -37,7 +37,7 @@
     border-radius: 20px;
     padding: 15px;
     cursor: pointer;
-    width: 30%;
+    width: 40%;
 }
 
 .textDiv div {
@@ -61,6 +61,10 @@
     color: #828282;
     background-color: #F2F2F2;
     border: 2px solid #828282;
+}
+.order:hover{
+    background-color: #d6d3d3;
+
 }
 
 .burgerDiv {
