--- a/app/restaurants/retaurant.module.css
+++ b/app/restaurants/retaurant.module.css
@@ -49,6 +49,8 @@
     align-items:baseline;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .mainDiv {
@@ -58,9 +60,12 @@
     cursor: pointer;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     margin: 0 auto;
     gap: 20px;
+    height: 50vh;
+    max-height: 40vh;
+    overflow-y: auto;
     box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
 
